src/grammar/runtime/SandParser.cpp

// Generated from SandParser.g4 by ANTLR 4.8


#include "SandParserVisitor.h"

#include "SandParser.h"


using namespace antlrcpp;
using namespace antlr4;

SandParser::SandParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SandParser::~SandParser() {
  delete _interpreter;
}

std::string SandParser::getGrammarFileName() const {
  return "SandParser.g4";
}

const std::vector<std::string>& SandParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SandParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- InstructionsContext ------------------------------------------------------------------

SandParser::InstructionsContext::InstructionsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SandParser::EosContext* SandParser::InstructionsContext::eos() {
  return getRuleContext<SandParser::EosContext>(0);
}

std::vector<SandParser::StatementContext *> SandParser::InstructionsContext::statement() {
  return getRuleContexts<SandParser::StatementContext>();
}

SandParser::StatementContext* SandParser::InstructionsContext::statement(size_t i) {
  return getRuleContext<SandParser::StatementContext>(i);
}


size_t SandParser::InstructionsContext::getRuleIndex() const {
  return SandParser::RuleInstructions;
}


antlrcpp::Any SandParser::InstructionsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SandParserVisitor*>(visitor))
    return parserVisitor->visitInstructions(this);
  else
    return visitor->visitChildren(this);
}

SandParser::InstructionsContext* SandParser::instructions() {
  InstructionsContext *_localctx = _tracker.createInstance<InstructionsContext>(_ctx, getState());
  enterRule(_localctx, 0, SandParser::RuleInstructions);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(155);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SandParser::Add)
      | (1ULL << SandParser::Sub)
      | (1ULL << SandParser::Mul)
      | (1ULL << SandParser::Not)
      | (1ULL << SandParser::Neg)
      | (1ULL << SandParser::BitwiseAnd)
      | (1ULL << SandParser::OpeningParen)
      | (1ULL << SandParser::OpeningBrace)
      | (1ULL << SandParser::SizeOf)
      | (1ULL << SandParser::Class)
      | (1ULL << SandParser::Special)
      | (1ULL << SandParser::Union)
      | (1ULL << SandParser::Enum)
      | (1ULL << SandParser::Namespace)
      | (1ULL << SandParser::VariableDeclarator)
      | (1ULL << SandParser::If)
      | (1ULL << SandParser::While)
      | (1ULL << SandParser::Break)
      | (1ULL << SandParser::For)
      | (1ULL << SandParser::Function)
      | (1ULL << SandParser::Extern)
      | (1ULL << SandParser::Return)
      | (1ULL << SandParser::Alias))) != 0) || ((((_la - 65) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 65)) & ((1ULL << (SandParser::Attribute - 65))
      | (1ULL << (SandParser::Assembly - 65))
      | (1ULL << (SandParser::Import - 65))
      | (1ULL << (SandParser::True - 65))
      | (1ULL << (SandParser::False - 65))
      | (1ULL << (SandParser::NullLiteral - 65))
      | (1ULL << (SandParser::VariableName - 65))
      | (1ULL << (SandParser::StringLiteral - 65))
      | (1ULL << (SandParser::CharLiteral - 65))
      | (1ULL << (SandParser::DecimalLiteral - 65))
      | (1ULL << (SandParser::FloatingLiteral - 65))
      | (1ULL << (SandParser::ZeroLiteral - 65))
      | (1ULL << (SandParser::HexadecimalLiteral - 65))
      | (1ULL << (SandParser::BinaryLiteral - 65)))) != 0)) {
      setState(152);
      statement();
      setState(157);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(158);
    eos();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BodyContext ------------------------------------------------------------------

SandParser::BodyContext::BodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SandParser::BodyContext::OpeningBrace() {
  return getToken(SandParser::OpeningBrace, 0);
}

tree::TerminalNode* SandParser::BodyContext::ClosingBrace() {
  return getToken(SandParser::ClosingBrace, 0);
}

std::vector<SandParser::StatementContext *> SandParser::BodyContext::statement() {
  return getRuleContexts<SandParser::StatementContext>();
}

SandParser::StatementContext* SandParser::BodyContext::statement(size_t i) {
  return getRuleContext<SandParser::StatementContext>(i);
}


size_t SandParser::BodyContext::getRuleIndex() const {
  return SandParser::RuleBody;
}


antlrcpp::Any SandParser::BodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SandParserVisitor*>(visitor))
    return parserVisitor->visitBody(this);
  else
    return visitor->visitChildren(this);
}

SandParser::BodyContext* SandParser::body() {
  BodyContext *_localctx = _tracker.createInstance<BodyContext>(_ctx, getState());
  enterRule(_localctx, 2, SandParser::RuleBody);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(160);
    match(SandParser::OpeningBrace);
    setState(164);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SandParser::Add)
      | (1ULL << SandParser::Sub)
      | (1ULL << SandParser::Mul)
      | (1ULL << SandParser::Not)
      | (1ULL << SandParser::Neg)
      | (1ULL << SandParser::BitwiseAnd)
      | (1ULL << SandParser::OpeningParen)
      | (1ULL << SandParser::OpeningBrace)
      | (1ULL << SandParser::SizeOf)
      | (1ULL << SandParser::Class)
      | (1ULL << SandParser::Special)
      | (1ULL << SandParser::Union)
      | (1ULL << SandParser::Enum)
      | (1ULL << SandParser::Namespace)
      | (1ULL << SandParser::VariableDeclarator)
      | (1ULL << SandParser::If)
      | (1ULL << SandParser::While)
      | (1ULL << SandParser::Break)
      | (1ULL << SandParser::For)
      | (1ULL << SandParser::Function)
      | (1ULL << SandParser::Extern)
      | (1ULL << SandParser::Return)
      | (1ULL << SandParser::Alias))) != 0) || ((((_la - 65) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 65)) & ((1ULL << (SandParser::Attribute - 65))
      | (1ULL << (SandParser::Assembly - 65))
      | (1ULL << (SandParser::Import - 65))
      | (1ULL << (SandParser::True - 65))
      | (1ULL << (SandParser::False - 65))
      | (1ULL << (SandParser::NullLiteral - 65))
      | (1ULL << (SandParser::VariableName - 65))
      | (1ULL << (SandParser::StringLiteral - 65))
      | (1ULL << (SandParser::CharLiteral - 65))
      | (1ULL << (SandParser::DecimalLiteral - 65))
      | (1ULL << (SandParser::FloatingLiteral - 65))
      | (1ULL << (SandParser::ZeroLiteral - 65))
      | (1ULL << (SandParser::HexadecimalLiteral - 65))
      | (1ULL << (SandParser::BinaryLiteral - 65)))) != 0)) {
      setState(161);
      statement();
      setState(166);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(167);
    match(SandParser::ClosingBrace);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

SandParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SandParser::FunctionContext* SandParser::StatementContext::function() {
  return getRuleContext<SandParser::FunctionContext>(0);
}

SandParser::NamespaceStatementContext* SandParser::StatementContext::namespaceStatement() {
  return getRuleContext<SandParser::NamespaceStatementContext>(0);
}

SandParser::ExpressionContext* SandParser::StatementContext::expression() {
  return getRuleContext<SandParser::ExpressionContext>(0);
}

tree::TerminalNode* SandParser::StatementContext::InstructionsSeparator() {
  return getToken(SandParser::InstructionsSeparator, 0);
}

SandParser::BodyContext* SandParser::StatementContext::body() {
  return getRuleContext<SandParser::BodyContext>(0);
}

SandParser::VariableDeclarationContext* SandParser::StatementContext::variableDeclaration() {
  return getRuleContext<SandParser::VariableDeclarationContext>(0);
}

SandParser::ReturnStatementContext* SandParser::StatementContext::returnStatement() {
  return getRuleContext<SandParser::ReturnStatementContext>(0);
}

SandParser::IfStatementContext* SandParser::StatementContext::ifStatement() {
  return getRuleContext<SandParser::IfStatementContext>(0);
}

SandParser::WhileStatementContext* SandParser::StatementContext::whileStatement() {
  return getRuleContext<SandParser::WhileStatementContext>(0);
}

SandParser::ForStatementContext* SandParser::StatementContext::forStatement() {
  return getRuleContext<SandParser::ForStatementContext>(0);
}

SandParser::BreakStatementContext* SandParser::StatementContext::breakStatement() {
  return getRuleContext<SandParser::BreakStatementContext>(0);
}

SandParser::SpecialClassStatementContext* SandParser::StatementContext::specialClassStatement() {
  return getRuleContext<SandParser::SpecialClassStatementContext>(0);
}

SandParser::ClassStatementContext* SandParser::StatementContext::classStatement() {
  return getRuleContext<SandParser::ClassStatementContext>(0);
}

SandParser::UnionStatementContext* SandParser::StatementContext::unionStatement() {
  return getRuleContext<SandParser::UnionStatementContext>(0);
}

SandParser::EnumStatementContext* SandParser::StatementContext::enumStatement() {
  return getRuleContext<SandParser::EnumStatementContext>(0);
}

SandParser::ImportStatementContext* SandParser::StatementContext::importStatement() {
  return getRuleContext<SandParser::ImportStatementContext>(0);
}

SandParser::AssemblyStatementContext* SandParser::StatementContext::assemblyStatement() {
  return getRuleContext<SandParser::AssemblyStatementContext>(0);
}

SandParser::AliasContext* SandParser::StatementContext::alias() {
  return getRuleContext<SandParser::AliasContext>(0);
}


size_t SandParser::StatementContext::getRuleIndex() const {
  return SandParser::RuleStatement;
}


antlrcpp::Any SandParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SandParserVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

SandParser::StatementContext* SandParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, SandParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(198);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(169);
      function();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(170);
      namespaceStatement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(171);
      expression(0);
      setState(172);
      match(SandParser::InstructionsSeparator);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(174);
      body();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(175);
      variableDeclaration();
      setState(176);
      match(SandParser::InstructionsSeparator);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(178);
      returnStatement();
      setState(179);
      match(SandParser::InstructionsSeparator);
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(181);
      ifStatement();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(182);
      whileStatement();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(183);
      forStatement();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(184);
      breakStatement();
      setState(185);
      match(SandParser::InstructionsSeparator);
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(187);
      specialClassStatement();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(188);
      classStatement();
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(189);
      unionStatement();
      break;
    }

    case 14: {
      enterOuterAlt(_localctx, 14);
      setState(190);
      enumStatement();
      break;
    }

    case 15: {
      enterOuterAlt(_localctx, 15);
      setState(191);
      importStatement();
      break;
    }

    case 16: {
      enterOuterAlt(_localctx, 16);
      setState(192);
      assemblyStatement();
      setState(193);
      match(SandParser::InstructionsSeparator);
      break;
    }

    case 17: {
      enterOuterAlt(_localctx, 17);
      setState(195);
      alias();
      setState(196);
      match(SandParser::InstructionsSeparator);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

SandParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SandParser::ExpressionContext::getRuleIndex() const {
  return SandParser::RuleExpression;
}

void SandParser::ExpressionContext::copyFrom(ExpressionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- SuffixUnaryNegationExpressionContext ------------------------------------------------------------------

SandParser::ExpressionContext* SandParser::SuffixUnaryNegationExpressionContext::expression() {
  return getRuleContext<SandParser::ExpressionContext>(0);
}

tree::TerminalNode* SandParser::SuffixUnaryNegationExpressionContext::Not() {
  return getToken(SandParser::Not, 0);
}

SandParser::SuffixUnaryNegationExpressionContext::SuffixUnaryNegationExpressionContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any SandParser::SuffixUnaryNegationExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SandParserVisitor*>(visitor))
    return parserVisitor->visitSuffixUnaryNegationExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- TernaryExpressionContext ------------------------------------------------------------------

std::vector<SandParser::ExpressionContext *> SandParser::TernaryExpressionContext::expression() {
  return getRuleContexts<SandParser::ExpressionContext>();
}

SandParser::ExpressionContext* SandParser::TernaryExpressionContext::expression(size_t i) {
  return getRuleContext<SandParser::ExpressionContext>(i);
}

tree::TerminalNode* SandParser::TernaryExpressionContext::TernaryOperator() {
  return getToken(SandParser::TernaryOperator, 0);
}

tree::TerminalNode* SandParser::TernaryExpressionContext::Colon() {
  return getToken(SandParser::Colon, 0);
}

SandParser::TernaryExpressionContext::TernaryExpressionContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any SandParser::TernaryExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SandParserVisitor*>(visitor))
    return parserVisitor->visitTernaryExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BinaryShiftOperationContext ------------------------------------------------------------------

std::vector<SandParser::ExpressionContext *> SandParser::BinaryShiftOperationContext::expression() {
  return getRuleContexts<SandParser::ExpressionContext>();
}

SandParser::ExpressionContext* SandParser::BinaryShiftOperationContext::expression(size_t i) {
  return getRuleContext<SandParser::ExpressionContext>(i);
}

SandParser::ShiftOperatorContext* SandParser::BinaryShiftOperationContext::shiftOperator() {
  return getRuleContext<SandParser::ShiftOperatorContext>(0);
}

SandParser::BinaryShiftOperationContext::BinaryShiftOperationContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any SandParser::BinaryShiftOperationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SandParserVisitor*>(visitor))
    return parserVisitor->visitBinaryShiftOperation(this);
  else
    return visitor->visitChildren(this);
}
//----------------- InParenExpressionContext ------------------------------------------------------------------

tree::TerminalNode* SandParser::InParenExpressionContext::OpeningParen() {
  return getToken(SandParser::OpeningParen, 0);
}

SandParser::ExpressionContext* SandParser::InParenExpressionContext::expression() {
  return getRuleContext<SandParser::ExpressionContext>(0);
}

tree::TerminalNode* SandParser::InParenExpressionContext::ClosingParen() {
  return getToken(SandParser::ClosingParen, 0);
}

SandParser::InParenExpressionContext::InParenExpressionContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any SandParser::InParenExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SandParserVisitor*>(visitor))
    return parserVisitor->visitInParenExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BinaryOperationContext ------------------------------------------------------------------

std::vector<SandParser::ExpressionContext *> SandParser::BinaryOperationContext::expression() {
  return getRuleContexts<SandParser::ExpressionContext>();
}

SandParser::ExpressionContext* SandParser::BinaryOperationContext::expression(size_t i) {
  return getRuleContext<SandParser::ExpressionContext>(i);
}

SandParser::OperatorStatementContext* SandParser::BinaryOperationContext::operatorStatement() {
  return getRuleContext<SandParser::OperatorStatementContext>(0);
}

SandParser::BinaryOperationContext::BinaryOperationContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any SandParser::BinaryOperationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SandParserVisitor*>(visitor))
    return parserVisitor->visitBinaryOperation(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BinaryBitwiseOperationContext ------------------------------------------------------------------

std::vector<SandParser::ExpressionContext *> SandParser::BinaryBitwiseOperationContext::expression() {
  return getRuleContexts<SandParser::ExpressionContext>();
}

SandParser::ExpressionContext* SandParser::BinaryBitwiseOperationContext::expression(size_t i) {
  return getRuleContext<SandParser::ExpressionContext>(i);
}

SandParser::BitwiseOperatorStatementContext* SandParser::BinaryBitwiseOperationContext::bitwiseOperatorStatement() {
  return getRuleContext<SandParser::BitwiseOperatorStatementContext>(0);
}

SandParser::BinaryBitwiseOperationContext::BinaryBitwiseOperationContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any SandParser::BinaryBitwiseOperationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SandParserVisitor*>(visitor))
    return parserVisitor->visitBinaryBitwiseOperation(this);
  else
    return visitor->visitChildren(this);
}
//----------------- UnaryPositiveExpressionContext ------------------------------------------------------------------

tree::TerminalNode* SandParser::UnaryPositiveExpressionContext::Add() {
  return getToken(SandParser::Add, 0);
}

SandParser::ExpressionContext* SandParser::UnaryPositiveExpressionContext::expression() {
  return getRuleContext<SandParser::ExpressionContext>(0);
}

SandParser::UnaryPositiveExpressionContext::UnaryPositiveExpressionContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any SandParser::UnaryPositiveExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SandParserVisitor*>(visitor))
    return parserVisitor->visitUnaryPositiveExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NameExpressionContext ------------------------------------------------------------------

SandParser::ScopedNameContext* SandParser::NameExpressionContext::scopedName() {
  return getRuleContext<SandParser::ScopedNameContext>(0);
}

SandParser::NameExpressionContext::NameExpressionContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any SandParser::NameExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SandParserVisitor*>(visitor))
    return parserVisitor->visitNameExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BitwiseNegationExpressionContext ------------------------------------------------------------------

tree::TerminalNode* SandParser::BitwiseNegationExpressionContext::Neg() {
  return getToken(SandParser::Neg, 0);
}

SandParser::ExpressionContext* SandParser::BitwiseNegationExpressionContext::expression() {
  return getRuleContext<SandParser::ExpressionContext>(0);
}

SandParser::BitwiseNegationExpressionContext::BitwiseNegationExpressionContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any SandParser::BitwiseNegationExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SandParserVisitor*>(visitor))
    return parserVisitor->visitBitwiseNegationExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IndexContext ------------------------------------------------------------------

std::vector<SandParser::ExpressionContext *> SandParser::IndexContext::expression() {
  return getRuleContexts<SandParser::ExpressionContext>();
}

SandParser::ExpressionContext* SandParser::IndexContext::expression(size_t i) {
  return getRuleContext<SandParser::ExpressionContext>(i);
}

tree::TerminalNode* SandParser::IndexContext::OpeningBracket() {
  return getToken(SandParser::OpeningBracket, 0);
}

tree::TerminalNode* SandParser::IndexContext::ClosingBracket() {
  return getToken(SandParser::ClosingBracket, 0);
}

SandParser::IndexContext::IndexContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any SandParser::IndexContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SandParserVisitor*>(visitor))
    return parserVisitor->visitIndex(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FunctionCallExpressionContext ------------------------------------------------------------------

SandParser::ExpressionContext* SandParser::FunctionCallExpressionContext::expression() {
  return getRuleContext<SandParser::ExpressionContext>(0);
}

tree::TerminalNode* SandParser::FunctionCallExpressionContext::OpeningParen() {
  return getToken(SandParser::OpeningParen, 0);
}

tree::TerminalNode* SandParser::FunctionCallExpressionContext::ClosingParen() {
  return getToken(SandParser::ClosingParen, 0);
}

SandParser::FunctionCallArgumentsContext* SandParser::FunctionCallExpressionContext::functionCallArguments() {
  return getRuleContext<SandParser::FunctionCallArgumentsContext>(0);
}

SandParser::FunctionCallExpressionContext::FunctionCallExpressionContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any SandParser::FunctionCallExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SandParserVisitor*>(visitor))
    return parserVisitor->visitFunctionCallExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SizeofExpressionContext ------------------------------------------------------------------

tree::TerminalNode* SandParser::SizeofExpressionContext::SizeOf() {
  return getToken(SandParser::SizeOf, 0);
}

SandParser::ExpressionContext* SandParser::SizeofExpressionContext::expression() {
  return getRuleContext<SandParser::ExpressionContext>(0);
}

SandParser::TypeContext* SandParser::SizeofExpressionContext::type() {
  return getRuleContext<SandParser::TypeContext>(0);
}

SandParser::SizeofExpressionContext::SizeofExpressionContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any SandParser::SizeofExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SandParserVisitor*>(visitor))
    return parserVisitor->visitSizeofExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- UnaryNegationExpressionContext ------------------------------------------------------------------

tree::TerminalNode* SandParser::UnaryNegationExpressionContext::Not() {
  return getToken(SandParser::Not, 0);
}

SandParser::ExpressionContext* SandParser::UnaryNegationExpressionContext::expression() {
  return getRuleContext<SandParser::ExpressionContext>(0);
}

SandParser::UnaryNegationExpressionContext::UnaryNegationExpressionContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any SandParser::UnaryNegationExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SandParserVisitor*>(visitor))
    return parserVisitor->visitUnaryNegationExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FunctionExpressionContext ------------------------------------------------------------------

SandParser::FunctionContext* SandParser::FunctionExpressionContext::function() {
  return getRuleContext<SandParser::FunctionContext>(0);
}

SandParser::FunctionExpressionContext::FunctionExpressionContext(ExpressionContext *ctx) { copyFrom(ctx); }

